--- a/views/index.ejs
+++ b/views/index.ejs
@@ -230,7 +230,7 @@
 
       <!-- Data Masuk Section -->
       <div class="data-progress">
-        <div class="progress-label">📊 Data Masuk</div>
+        <div class="progress-label">Perhitungan Suara Masuk</div>
         <div class="progress-bar">
           <div class="progress-fill" data-width="<%= pctDisplay %>"></div>
         </div>
