--- a/views/break.ejs
+++ b/views/break.ejs
@@ -93,17 +93,17 @@
         }
 
         /* === Warna Kandidat === */
-        .c1 {
+        .c2 {
             background: linear-gradient(160deg, rgba(255, 70, 70, 0.85), rgba(180, 20, 20, 0.6));
             color: #fff;
         }
 
-        .c2 {
+        .c3 {
             background: linear-gradient(160deg, rgba(70, 130, 255, 0.85), rgba(20, 80, 200, 0.6));
             color: #fff;
         }
 
-        .c3 {
+        .c4 {
             background: linear-gradient(160deg, rgba(255, 220, 80, 0.9), rgba(210, 180, 30, 0.6));
             color: #222;
         }
@@ -202,7 +202,9 @@
             <div class="ishoma-title">Pemilihan Ketua OSIS - Perolehan Sementara</div>
 
             <div class="candidate-row">
-                <% candidates.forEach((c, i)=> { %>
+                <% candidates.forEach((c, i)=> { 
+                    if (c.id === 0) return;
+                    %>
                     <div class="candidate c<%= i + 1 %>">
                         <% if (c.photo) { %>
                             <img src="<%= c.photo %>" alt="<%= c.name %>">
