--- a/views/index.ejs
+++ b/views/index.ejs
@@ -192,7 +192,7 @@
           <div class="progress-fill" data-width="<%= pctDisplay %>"></div>
         </div>
         <div class="progress-text">
-          <%= pctDisplay %>% dari <%= totalMax %> suara (<%= totalVotes %> masuk)
+          <%= pctDisplay %>% dari Total Suara.
         </div>
       </div>
     </div>
